[PRISM] Turn off mismatched indentation warnings in eval

Fixes [Bug #20732]